--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -13,3 +13,14 @@
 #horaire, #quiSommesNous, #nousContacter {
 	cursor: pointer;
 }
+
+#connexionBoutton {
+	position: absolute;
+	right: 10px;
+	z-index: 1000000;
+}
+#dashboardBoutton {
+	position: absolute;
+	right: 200px;
+	z-index: 1000000;
+}
