--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,21 @@
 #horaire, #quiSommesNous, #nousContacter {
 	cursor: pointer;
 }
+#connexionBoutton {
+	position: absolute;
+	right: 10px;
+	top: 0;
+	z-index: 1000000;
+}
+#dashboardBoutton {
+	position: absolute;
+	right: 200px;
+	top: 0;
+	z-index: 1000000;
+}
+table{
+	margin-top: 100px;
+}
+.add_article{
+	margin-top: 100px;
+}
